terraform/config/eks-best-practices/check-control-plane-logging/test/chainsaw-test.yaml
#yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-payload.json --policy ../check-control-plane-logging.yaml --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-control-plane-logging
                rules:
                - rule:
                    name: check-control-plane-logging
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          bindings:
          - name: logTypesToBeEnabledInTheFailedPayload
            value: 
            - api
            - audit
            - authenticator
            - controllerManager
            - scheduler
          content: |
            set -e
            kyverno-json scan --policy ../check-control-plane-logging.yaml --payload ./bad-payload-01.json --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-control-plane-logging
                rules:
                - rule:
                    name: check-control-plane-logging
                  error: ~
                  violations:
                  - (contains(message, 'EKS control plane logging must be enabled for all log types')): true
                    ~.(errors):
                        type: FieldValueInvalid
                        value: false
                        detail: 'Expected value: true'
                    (join(' ', errors[].field[]))->disabledLogTypesInThePayload:
                      ~.($logTypesToBeEnabledInTheFailedPayload):
                          (contains($disabledLogTypesInThePayload, @)): true
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-02
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          bindings:
          - name: logTypesToBeEnabledInTheFailedPayload
            value: 
            - audit
            - authenticator
            - controllerManager
          content: |
            set -e
            kyverno-json scan --policy ../check-control-plane-logging.yaml --payload ./bad-payload-02.json --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-control-plane-logging
                rules:
                - rule:
                    name: check-control-plane-logging
                  error: ~
                  violations:
                  - (contains(message, 'EKS control plane logging must be enabled for all log types')): true
                    ~.(errors):
                        type: FieldValueInvalid
                        value: false
                        detail: 'Expected value: true'
                    (join(' ', errors[].field[]))->disabledLogTypesInThePayload:
                      ~.($logTypesToBeEnabledInTheFailedPayload):
                          (contains($disabledLogTypesInThePayload, @)): true
